# gusmandel

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  graph.txt  image.c  image.h  main.c  mandel.c  mandel.h  palette.c  palette.h  ppm.c  ppm.h  rgb.c  rgb.h
palettes/: pal1.ppm  pal2.ppm
scripts/: profile.sh  valgrind_test.sh
src/: gusmandel.c  gusmandel.h  image.c  image.h  main.c  mandel.c  mandel.h  palette.c  palette.h  ppm.c  ppm.h  rgb.c  rgb.h
